# MCPWell

./: .env.example  .gitignore  README.md  gradio_chat.py  mcp_server.py  portals.json  pyproject.toml  requirements.txt  test_chat.py  tools_config.yaml  tools_config_backup.yaml  tools_config_clean.yaml
.github/: copilot-instructions.md
config/portals/: devops_portal.yaml  infrastructure_portal.yaml  security_portal.yaml
docs/: PORTAL_INTEGRATION_GUIDE.md  SSP_WORKFLOW_DIAGRAM.md
examples/: complete_portal_integration_example.py  enhanced_usage_demo.py
src/: __init__.py
src/config/: __init__.py  config_manager.py
src/llm/: __init__.py  gemini_client.py
src/mcp/: __init__.py  enhanced_tools.py  server.py
src/nlp/: __init__.py  intent_classifier.py
src/portals/: __init__.py  portal_manager.py
src/workflows/: __init__.py  database_workflow.py
tests/: __init__.py  conftest.py  test_portal_registry.py  test_workflow_orchestrator.py
